Kubernetes/Network-policy/network_policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  podSelector: 
   matchLabels:
      app: backend
  policyTypes:
  - Ingress
  Ingress: 
  - from: 
    - podSelector:
       matchLabels:
        app: frontend
  ports:
    - protocol: tcp
      port: 80
