Kubernetes/Network-policy/np_from_specific_pod.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  podSelector: 
   matchLabels:
      app: backend
  policyTypes:
  - Ingress
  Ingress: 
  - from: 
    - podSelector:
       matchLabels:
        app: frontend
  ports:
    - protocol: tcp
      port: 80
